services/books/frontend/pl-books-frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: powerlibrary-books-frontend
  labels:
    app.powerlibrary.io/name: books-frontend
spec:
  containers:
    - name: pl-books-frontend-v1
      imagePullPolicy: Never
      image: pl-books-frontend-v1
      ports:
        - containerPort: 3000
      resources:
        requests:      
          memory: "1Gi"
          cpu: "500m"
        limits:
          memory: "2Gi"
          cpu: "1000m"
