services/books/frontend/pl-books-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pl-books-frontend-service
spec:
  type: ClusterIP
  selector:
    app.powerlibrary.io/name: books-frontend
  ports:
    - name: pl-books-frontend-port
      protocol: TCP
      port: 80
      targetPort: 3000
