services/books/frontend/pl-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pl-frontend-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pl-books-frontend-service
                port:
                  number: 80
          - path: /api/v1/book/
            pathType: Prefix
            backend:
              service:
                name: pl-books-backend-service
                port:
                  number: 8000
          - path: /api/v1/books/
            pathType: Prefix
            backend:
              service:
                name: pl-books-backend-service
                port:
                  number: 8000
          - path: /shelf
            pathType: Prefix
            backend:
              service:
                name: pl-shelfs-backend-service
                port:
                  number: 8081
